Fix campaign data form styling on small screens
Prevents input overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1233,6 +1233,7 @@ h5 {
 
 .form-input {
   width: 100%;
+  box-sizing: border-box;
 }
 
 .form-heading {
@@ -1484,6 +1485,7 @@ h5 {
   outline: none;
   position: relative;
   color: var(--text_dark);
+  box-sizing: border-box;
 }
 
 .campaign-input:hover {
